Fixing no scrolling problem on iOS, iPad etc
On line 545 added "-webkit-overflow-scrolling: touch; overflow: scroll;" to enable scrolling on iOS devices. see http://johanbrook.com/browsers/native-momentum-scrolling-ios-5/

--- a/public/styleguide/css/styleguide.scss
+++ b/public/styleguide/css/styleguide.scss
@@ -542,6 +542,8 @@ html#pattern-frame {
 	height: 100%; 
 	text-align: center; 
 	margin: 0 auto;
+	-webkit-overflow-scrolling: touch;
+  	overflow: scroll;
 
 	&.hay-mode {
 		-webkit-transition: all 40s linear;
